[project]
name = "daylight_timelapse"
version = "0.0.1"
dynamic = [
    "dependencies",
]
description = "Create a daylight spanning timelapser using the async_app package"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "daylight_timelapse",
]
license = {text = "MIT License"}
authors = [
  {name = "Jens Nie", email = "jneines@web.de"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."console_scripts"]
daylight_timelapse = "daylight_timelapse.daylight_timelapse:main"
photo_store = "daylight_timelapse.photo_store:main"
video_store = "daylight_timelapse.video_store:main"

[project.optional-dependencies]
all = [
    "daylight_timelapse[extra]",
]

#extra = [
#    "pandas",
#]


[tool]
[tool.setuptools.packages.find]
include = ["daylight_timelapse*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "daylight_timelapse/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88


[project.urls]
Homepage = "https://github.com/jneines/daylight_timelapse"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
